RESOLVED FIXED288427
Null dereference of m_policyDocumentLoader in FrameLoader::continueLoadAfterNavigationPolicy()
https://bugs.webkit.org/show_bug.cgi?id=288427
Summary Null dereference of m_policyDocumentLoader in FrameLoader::continueLoadAfterN...
Chris Dumez
Reported 2025-02-24 16:28:49 PST
Null dereference of m_policyDocumentLoader in FrameLoader::continueLoadAfterNavigationPolicy().
Attachments
Chris Dumez
Comment 1 2025-02-24 16:28:57 PST
Chris Dumez
Comment 2 2025-02-24 16:30:13 PST
EWS
Comment 3 2025-02-24 17:56:36 PST
Committed 291000@main (04e4880d6ed5): <https://commits.webkit.org/291000@main> Reviewed commits have been landed. Closing PR #41253 and removing active labels.
EWS
Comment 4 2025-02-25 13:16:48 PST
Committed 289651.175@safari-7621-branch (ede043be631a): <https://commits.webkit.org/289651.175@safari-7621-branch> Reviewed commits have been landed. Closing PR #2674 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.