Null dereference of m_policyDocumentLoader in FrameLoader::continueLoadAfterNavigationPolicy() https://bugs.webkit.org/show_bug.cgi?id=288427 rdar://142282930

Reviewed by Charlie Wolfe.

Add a null check for m_policyDocumentLoader as it appears it can be null.

* Source/WebCore/loader/FrameLoader.cpp:
(WebCore::FrameLoader::continueLoadAfterNavigationPolicy):

Canonical link: https://commits.webkit.org/291000@main